<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutFamily">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/family_background"
        android:scaleType="centerCrop"
        android:src="@mipmap/back_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageSeta"
        android:contentDescription="@string/backarrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_seta" />

    <ImageView
        android:id="@+id/iconFamilySearch"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="174dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/search_icon"
        app:layout_constraintBottom_toTopOf="@+id/textFamilySearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFamilySearch"
        android:text="@string/familias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconFamilySearch" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchFamilyView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@+id/recycleViewFamily"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:queryHint="@string/pesquisar"
        app:searchIcon="@mipmap/icon_search">

    </androidx.appcompat.widget.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewFamily"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>