<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/back_home"
        android:scaleType="centerCrop"
        android:src="@mipmap/back_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/about_image_thebug"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/thebug_icon"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/about_image_ifto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/logoifto"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_image_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thebug_enterprise"
            android:layout_marginStart="35dp"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ifto"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_below="@id/linear_text_layout"
        android:id="@+id/buttonPrivacy"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="25dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bt_privacy">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:src="@drawable/bt_privacy"
                app:tint="@color/blue_fort" />

            <ImageView
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:padding="10dp"
                android:src="@drawable/right_arrow"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="60dp"
                android:text="@string/privacy_policy"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>